--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 </div>
 </div>
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/6NOyX8E.png"></div>
+<div class="item-media"><img class="app-icon" src="6NOyX8E.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Showbox</div>
