--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 </div>
 </div>
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/QVbHAbD.jpg"></div>
+<div class="item-media"><img class="app-icon" src="QVbHAbD.jpg"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Moviebox</div>
@@ -322,7 +322,7 @@
 
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/AKOX94X.png"></div>
+<div class="item-media"><img class="app-icon" src="AKOX94X.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Spotify++</div>
@@ -346,7 +346,7 @@
 <div class="list-block media-list">
 <ul>
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/JVi5bF4.png"></div>
+<div class="item-media"><img class="app-icon" src="JVi5bF4.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">GForms++</div>
@@ -359,7 +359,7 @@
 </div>
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/qIPObrm.jpg"></div>
+<div class="item-media"><img class="app-icon" src="qIPObrm.jpg"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Fall Guys Mobile</div>
@@ -371,7 +371,7 @@
 </div>
 </div>
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/qBfRjpy.png"></div>
+<div class="item-media"><img class="app-icon" src="qBfRjpy.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Gacha Club</div>
