--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 </div>
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/XMfFniw.png"></div>
+<div class="item-media"><img class="app-icon" src="XMfFniw.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">OnlyFansX</div>
@@ -396,7 +396,7 @@
 </div>
 </div>
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/9DBcBNH.png"></div>
+<div class="item-media"><img class="app-icon" src="9DBcBNH.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">iAutoClicker</div>
@@ -421,7 +421,7 @@
 </div>
 </div>
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/pZUsSaL.png"></div>
+<div class="item-media"><img class="app-icon" src="pZUsSaL.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Aptoide</div>
@@ -433,7 +433,7 @@
 </div>
 </div>
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/C0VABJG.png"></div>
+<div class="item-media"><img class="app-icon" src="C0VABJG.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Arcade++</div>
@@ -447,7 +447,7 @@
 
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/YmiEcug.png"></div>
+<div class="item-media"><img class="app-icon" src="YmiEcug.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Procreate++</div>
@@ -474,7 +474,7 @@
 
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/GOnHbSQ.png"></div>
+<div class="item-media"><img class="app-icon" src="GOnHbSQ.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">PPSSPP</div>
@@ -487,7 +487,7 @@
 </div>
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/3OdEGmX.png"></div>
+<div class="item-media"><img class="app-icon" src="3OdEGmX.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Yubo++</div>
@@ -511,7 +511,7 @@
 </div>
 </div>
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/7s1tpFz.png"></div>
+<div class="item-media"><img class="app-icon" src="7s1tpFz.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">TikTok</div>
@@ -539,7 +539,7 @@
 </div>
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/6oqvvqr.jpg"></div>
+<div class="item-media"><img class="app-icon" src="6oqvvqr.jpg"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Call of Duty++</div>
@@ -552,7 +552,7 @@
 </div>
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/25Vh8Np.png"></div>
+<div class="item-media"><img class="app-icon" src="25Vh8Np.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Garena Free Fire++</div>
@@ -568,7 +568,7 @@
 
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/rUp52do.png"></div>
+<div class="item-media"><img class="app-icon" src="rUp52do.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">GTA San Andreas</div>
@@ -581,7 +581,7 @@
 </div>
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/APuORzK.png"></div>
+<div class="item-media"><img class="app-icon" src="APuORzK.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">NBA2K20</div>
@@ -594,7 +594,7 @@
 </div>
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/xLVuV0X.png"></div>
+<div class="item-media"><img class="app-icon" src="xLVuV0X.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">NBA JAM</div>
@@ -622,7 +622,7 @@
 <ul>
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/OOLDzI7.png"></div>
+<div class="item-media"><img class="app-icon" src="OOLDzI7.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Lucky Patcher</div>
@@ -642,7 +642,7 @@
 
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/0j4bCP0.png"></div>
+<div class="item-media"><img class="app-icon" src="0j4bCP0.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Gameguardian</div>
@@ -656,7 +656,7 @@
 
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/4hmPiOd.png"></div>
+<div class="item-media"><img class="app-icon" src="4hmPiOd.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Happy Mod</div>
