--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 </div>
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="../i.imgur.com/v99Dypu.png"></div>
+<div class="item-media"><img class="app-icon" src="v99Dypu.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Snapchat++</div>
