--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<title>terds.com</title>
+<title>triggerappy.com</title>
 <link rel="stylesheet" href="css/framework7.ios.min.css">
 <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
 <link rel="stylesheet" href="css/appvalley.css">
@@ -27,7 +27,7 @@
 <div class="content-block" style="max-width:414px; margin: 16px; margin-left: -16px;">
 
 <div class="app-card-2">
-   <img src="logo.jpg" style="max-width:375px;width:100%">
+   <img src="logo3.jpg" style="max-width:375px;width:100%">
 
 <div class="list-block media-list">
 <ul>
