--- a/itweakvip/OGInject/a4.html
+++ b/itweakvip/OGInject/a4.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-     window.lcr = "https://www.verifysuper.com/cl.php?id=89c3add8177c2c1591fcf9452c97cac1";
+     window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
