--- a/itweakvip/OGInject/ac.html
+++ b/itweakvip/OGInject/ac.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=0f3476f8c11efcca27e6b9e1b92cb254";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
