--- a/itweakvip/OGInject/appstore.html
+++ b/itweakvip/OGInject/appstore.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=f6b327eb3141aaf491d72e5bf75e28ee";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
