--- a/itweakvip/OGInject/aptoide.html
+++ b/itweakvip/OGInject/aptoide.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.locked1.com/cl.php?id=187c72abaf7d6ae4ded143ee21052ba6";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
