--- a/itweakvip/OGInject/arcade.html
+++ b/itweakvip/OGInject/arcade.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.locked2.com/cl.php?id=270ad39c25dbd330f4fac11324e6913a";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
