--- a/itweakvip/OGInject/cod.html
+++ b/itweakvip/OGInject/cod.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=0fcbe5964d7ea417633138d887e82ed3";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
