--- a/itweakvip/OGInject/fg.html
+++ b/itweakvip/OGInject/fg.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=4a1ec9d4baf3e585ae3b999610249e52";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
