--- a/itweakvip/OGInject/gameguardian.html
+++ b/itweakvip/OGInject/gameguardian.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=9938066e3c69482f5077dcfa2e76a247";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
