--- a/itweakvip/OGInject/garena.html
+++ b/itweakvip/OGInject/garena.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=c902149dda28bf5220ba545e09ed80c0";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
