--- a/itweakvip/OGInject/gc.html
+++ b/itweakvip/OGInject/gc.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=ae89736321547ab44eaeac77139f34ab";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
