--- a/itweakvip/OGInject/gra.html
+++ b/itweakvip/OGInject/gra.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=c09f818cc829a06bb97fd5e70eb2f17b";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
