--- a/itweakvip/OGInject/movie.html
+++ b/itweakvip/OGInject/movie.html
@@ -128,7 +128,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=9531c71f61eccd36784618b92a29a928";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
