--- a/itweakvip/OGInject/mt.html
+++ b/itweakvip/OGInject/mt.html
@@ -135,7 +135,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://install2view.com/cl/i/o6dgdq";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
