--- a/itweakvip/OGInject/nba.html
+++ b/itweakvip/OGInject/nba.html
@@ -127,7 +127,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=c0380999cd13828c536a11e364ae3963";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
