--- a/itweakvip/OGInject/nba2.html
+++ b/itweakvip/OGInject/nba2.html
@@ -127,7 +127,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=dceba313dd784c2e6a7232949c67e6f1";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
