--- a/itweakvip/OGInject/of.html
+++ b/itweakvip/OGInject/of.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=b93628e8acedc0c72062849e413c09a7";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
