--- a/itweakvip/OGInject/procreate.html
+++ b/itweakvip/OGInject/procreate.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifyzone.net/cl.php?id=589bae824f2ca8b4f4f3db6bd3f156d3";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
