--- a/itweakvip/OGInject/psp.html
+++ b/itweakvip/OGInject/psp.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.bigappboi.com/cl.php?id=bb37be5216261b0d8418d76f3cfd3f34";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
