--- a/itweakvip/OGInject/s1.html
+++ b/itweakvip/OGInject/s1.html
@@ -134,11 +134,10 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=9e535a364cb96e9ce630bb6c40b18495";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
-    id('close').onclick = function(){
         id("install").style.display = "none";
     }
 
