--- a/itweakvip/OGInject/s2.html
+++ b/itweakvip/OGInject/s2.html
@@ -136,7 +136,7 @@ The game was released on November 10, 2020, for Microsoft Windows, PlayStation 4
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=a7b2ea6a07302f2f76fbeafee89c4030";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
