--- a/itweakvip/OGInject/s5.html
+++ b/itweakvip/OGInject/s5.html
@@ -133,7 +133,7 @@ FGBA4iOS is an amazing Game Boy Advance emulator created by iOS developer Riley 
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=40536c6d556c857b0f4afa01ddcefeec";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
