--- a/itweakvip/OGInject/snap.html
+++ b/itweakvip/OGInject/snap.html
@@ -127,7 +127,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.locked4.com/cl.php?id=d1362c9e1081b6c93a6c65d56863aa16";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
