--- a/itweakvip/OGInject/tgold.html
+++ b/itweakvip/OGInject/tgold.html
@@ -132,7 +132,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=285b4adbe213c161b75ead99624eda4a";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
