--- a/itweakvip/OGInject/tik.html
+++ b/itweakvip/OGInject/tik.html
@@ -129,7 +129,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=4d0f996f3e02da3e62e7cef7713ba1ab";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
