--- a/itweakvip/OGInject/yubo.html
+++ b/itweakvip/OGInject/yubo.html
@@ -125,7 +125,7 @@
         id("app_name").innerHTML = name;
         id("app-caption-title").innerHTML = name;
 
-        window.lcr = "https://www.locked3.com/cl.php?id=db095fc9f35f79a0c66a0a28e9dd0c85";
+        window.lcr = "https://verifysuper.com/cl/i/klpd5q";
         id("install").style.display = "block";
     }
 
