--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <a href="itweakvip/OGInject/t3.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 </div>
 </div>
-<div class="item-subtitle">iOS</div>
+<div class="item-subtitle">iS</div>
 </div>
 </div>
 
