--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="app-card-2">
    <img src="logo3.jpg" style="max-width:375px;width:100%">
 
-<div class="list-block media-list">
+div class="list-block media-list">
 <ul>
 
 <div class="item-content">
@@ -56,9 +56,9 @@
 <a href="itweakvip/OGInject/t3.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 </div>
 </div>
-<div class="item-subtitle">iS</div>
+<div class="item-subtitle">iOS</div>
 </div>
-</div>
+
 
 </div>
 
