--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="list-block media-list">
 <ul>
 
-iv class="item-content">
+<div class="item-content">
 <div class="item-media"><img class="app-icon" src="ten.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
@@ -41,7 +41,7 @@ iv class="item-content">
 <a href="itweakvip/OGInject/t1.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 </div>
 </div>
-<div class="item-subtitle"></div>
+<div class="item-subtitle">Android</div>
 </div>
 
 
