--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 <ul>
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="ten.png"></div>
+<div class="item-media"><img class="app-icon" src="Bloons TD 6.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
-<div class="item-title"></div>
+<div class="item-title">Bloons TD 6</div>
 <div class="item-after">
 <a href="itweakvip/OGInject/t1.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 </div>
 </div>
-<div class="item-subtitle">Android</div>
+<div class="item-subtitle">IOS / Android</div>
 </div>
 
 
