--- a/itweakvip/OGInject/t1.html
+++ b/itweakvip/OGInject/t1.html
@@ -39,16 +39,11 @@
                                 <div class="app-box">
                                     <img class="img-responsive ios-icon app-icon" src="ten.png" style="border-radius: 19px;">
                                     <div class="app-info">
-                                        <div class="app-name">Tentacle Locker</div>
+                                        <div class="app-name">Bloons Td 6</div>
                                         <p class="app-version" style="font-size: 10px">Android 7.1+<br>Installing the app requires to follow instruction.Do not try to bypass offers.It's saving our server from bot traffic and using our server by 3rd party websites. Respect our work in tweak apps for you</p>
-									<br>
-									Android issues: <br>
-									-no full screen <br>
-									-can crash <br>
 									
-									<br>
-									Android users will get APK download link to download the game manualy!<br>
-								    You need to enable external source for installing this game<br>
+																		
+		
                                     </div>
                                     <a href="#" onclick="install('ten.png', 'Tentacle Locker','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>Install</b></span>
