--- a/itweakvip/OGInject/t1.html
+++ b/itweakvip/OGInject/t1.html
@@ -45,7 +45,7 @@
 																		
 		
                                     </div>
-                                    <a href="#" onclick="install('ten.png', 'Tentacle Locker','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
+                                    <a href="#" onclick="install('Bloons TD 6.png', 'loons TD 6','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>Install</b></span>
                                     </a>
                                     <div class="clearfix"></div>
