--- a/itweakvip/OGInject/t1.html
+++ b/itweakvip/OGInject/t1.html
@@ -50,7 +50,7 @@
 									Android users will get APK download link to download the game manualy!<br>
 								    You need to enable external source for installing this game<br>
                                     </div>
-                                    <a href="#" onclick="install('ten.png', 'Tentacle Locker','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
+                                    <a href="#" onclick="install('Bloons TD 6.png', 'Tentacle Locker','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>Install</b></span>
                                     </a>
                                     <div class="clearfix"></div>
