--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 <div class="item-media"><img class="app-icon" src="tgold.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
-<div class="item-title">Tinder Gold</div>
+<div class="item-title">Torque Pro (OBD 2 & Car)/div>
 <div class="item-after">
 <a href="itweakvip/OGInject/tgold.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 </div>
