--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 <div class="list-block media-list">
 <ul>
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="tgold.png"></div>
+<div class="item-media"><img class="app-icon" src="torque.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Torque Pro (OBD 2 & Car)</div>
