--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 <a href="itweakvip/OGInject/tgold.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 </div>
 </div>
-<div class="item-subtitle">Tinder Gold iOS Android</div>
+<div class="item-subtitle">Torque Pro iOS Android</div>
 </div>
 </div>
 <div class="item-content">
