--- a/itweakvip/OGInject/tgold.html
+++ b/itweakvip/OGInject/tgold.html
@@ -37,20 +37,17 @@
                     <div class="app-box appscloud-block">
                                                     <div class="col-md-12 app-list-md">
                                 <div class="app-box">
-                                    <img class="img-responsive ios-icon app-icon" src="tgold.png" style="border-radius: 19px;">
+                                    <img class="img-responsive ios-icon app-icon" src="torque.png" style="border-radius: 19px;">
                                     <div class="app-info">
-                                        <div class="app-name">Tinder Gold</div>
-                                        <p class="app-version" style="font-size: 10px">No Jailbreak iOS 11, 12, 13, 14 and Android 7.1+<br>Installing the app requires to follow instruction.Do not try to bypass offers.It's saving our server from bot traffic and using our server by 3rd party websites. Respect our work in tweak apps for you</p>
+                                        <div class="app-name">Torque Pro (OBD 2 & Car)</div>
+                                        <p class="app-version" style="font-size: 10px"><br>Installing the app requires to follow instruction.Do not try to bypass offers.It's saving our server from bot traffic and using our server by 3rd party websites. Respect our work in tweak apps for you</p>
 									<br>
 									Features:<br>
 									-check likes numbers you have <br>
 									-automatch, dismiss
-						<br>
-						-spy profiles who like you<br>
-						-hide you like someone<br>
-						-find local singles who like you<br>
+						
                                     </div>
-                                    <a href="#" onclick="install('tgold.png', 'Tinder','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
+                                    <a href="#" onclick="install('torque.png', 'Tinder','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>Install</b></span>
                                     </a>
                                     <div class="clearfix"></div>
