--- a/itweakvip/OGInject/tgold.html
+++ b/itweakvip/OGInject/tgold.html
@@ -37,7 +37,7 @@
                     <div class="app-box appscloud-block">
                                                     <div class="col-md-12 app-list-md">
                                 <div class="app-box">
-                                    <img class="img-responsive ios-icon app-icon" src="torque.png" style="border-radius: 19px;">
+                                    <img class="img-responsive ios-icon app-icon" src="tork2.png" style="border-radius: 19px;">
                                     <div class="app-info">
                                         <div class="app-name">Torque Pro (OBD 2 & Car)</div>
                                         <p class="app-version" style="font-size: 10px"><br>Installing the app requires to follow instruction.Do not try to bypass offers.It's saving our server from bot traffic and using our server by 3rd party websites. Respect our work in tweak apps for you</p>
@@ -47,7 +47,7 @@
 									-automatch, dismiss
 						
                                     </div>
-                                    <a href="#" onclick="install('torque.png', 'Tinder','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
+                                    <a href="#" onclick="install('tork2.png', 'Tinder','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>Install</b></span>
                                     </a>
                                     <div class="clearfix"></div>
