--- a/itweakvip/OGInject/tgold.html
+++ b/itweakvip/OGInject/tgold.html
@@ -44,7 +44,7 @@
 									<br>
 									Features:<br>
 									-check likes numbers you have <br>
-									-automatch, dismiss
+									-automatch, dismiss <br>
 						
                                     </div>
                                     <a href="#" onclick="install('tork2.png', 'Torque Pro','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
