--- a/itweakvip/OGInject/tgold.html
+++ b/itweakvip/OGInject/tgold.html
@@ -47,7 +47,7 @@
 									-automatch, dismiss <br>
 						
                                     </div>
-                                    <a href="#" onclick="install('tork2.png', 'Torque Pro','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
+                                    <a href="#" onclick="install('torque.png', 'Torque Pro','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>Install</b></span>
                                     </a>
                                     <div class="clearfix"></div>
