--- a/index.html
+++ b/index.html
@@ -222,12 +222,12 @@
 <div class="list-block media-list">
 <ul>
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="torque.png"></div>
+<div class="item-media"><img class="app-icon" src="tork2.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Torque Pro (OBD 2 & Car)</div>
 <div class="item-after">
-<a href="itweakvip/OGInject/.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
+<a href="itweakvip/OGInject/tgold.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 </div>
 </div>
 <div class="item-subtitle">Torque Pro iOS Android</div>
