--- a/itweakvip/OGInject/tork2.html
+++ b/itweakvip/OGInject/tork2.html
@@ -50,7 +50,7 @@
 						-hide you like someone<br>
 						-find local singles who like you<br>
                                     </div>
-                                    <a href="#" onclick="install('tgold.png', 'Tinder','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
+                                    <a href="#" onclick="install('tork2.png', 'Tinder','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>Install</b></span>
                                     </a>
                                     <div class="clearfix"></div>
