--- a/itweakvip/OGInject/tork2.html
+++ b/itweakvip/OGInject/tork2.html
@@ -37,7 +37,7 @@
                     <div class="app-box appscloud-block">
                                                     <div class="col-md-12 app-list-md">
                                 <div class="app-box">
-                                    <img class="img-responsive ios-icon app-icon" src="bloonstd.png" style="border-radius: 19px;">
+                                    <img class="img-responsive ios-icon app-icon" src="tork2.png" style="border-radius: 19px;">
                                     <div class="app-info">
                                         <div class="app-name">Tinder Gold</div>
                                         <p class="app-version" style="font-size: 10px">No Jailbreak iOS 11, 12, 13, 14 and Android 7.1+<br>Installing the app requires to follow instruction.Do not try to bypass offers.It's saving our server from bot traffic and using our server by 3rd party websites. Respect our work in tweak apps for you</p>
