--- a/itweakvip/OGInject/tork2.html
+++ b/itweakvip/OGInject/tork2.html
@@ -39,16 +39,14 @@
                                 <div class="app-box">
                                     <img class="img-responsive ios-icon app-icon" src="tork3.png" style="border-radius: 19px;">
                                     <div class="app-info">
-                                        <div class="app-name">Tinder Gold</div>
-                                        <p class="app-version" style="font-size: 10px">No Jailbreak iOS 11, 12, 13, 14 and Android 7.1+<br>Installing the app requires to follow instruction.Do not try to bypass offers.It's saving our server from bot traffic and using our server by 3rd party websites. Respect our work in tweak apps for you</p>
+                                        <div class="app-name">Torque Pro</div>
+                                        <p class="app-version" style="font-size: 10px">iOS 11, 12, 13, 14 and Android 7.1+<br>Installing the app requires to follow instruction.Do not try to bypass offers.It's saving our server from bot traffic and using our server by 3rd party websites. Respect our work in tweak apps for you</p>
 									<br>
 									Features:<br>
-									-check likes numbers you have <br>
-									-automatch, dismiss
+									-all features <br>
+									
 						<br>
-						-spy profiles who like you<br>
-						-hide you like someone<br>
-						-find local singles who like you<br>
+						br>
                                     </div>
                                     <a href="#" onclick="install('tork2.png', 'Tinder','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>Install</b></span>
