--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 </div>
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="ten.png"></div>
+<div class="item-media"><img class="app-icon" src="drastic ds emulator image.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
-<div class="item-title">Tentacle Locker Mobile</div>
+<div class="item-title">DraStic Nintendo DS Emulator</div>
 <div class="item-after">
 <a href="itweakvip/OGInject/t3.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 </div>
