--- a/itweakvip/OGInject/t3.html
+++ b/itweakvip/OGInject/t3.html
@@ -48,7 +48,7 @@
 								
 								    
                                     </div>
-                                    <a href="#" onclick="install('ten.png', 'DraStic Nintendo DS Emulator','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
+                                    <a href="#" onclick="install('drastic ds emulator image.png', 'DraStic Nintendo DS Emulator','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>Install</b></span>
                                     </a>
                                     <div class="clearfix"></div>
