--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </div>
 
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="Nin10.png"></div>
+<div class="item-media"><img class="app-icon" src="nin10do.jpg"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">6200+ Nintendo Games</div>
