--- a/itweakvip/OGInject/nin10.html
+++ b/itweakvip/OGInject/nin10.html
@@ -37,7 +37,7 @@
                     <div class="app-box appscloud-block">
                                                     <div class="col-md-12 app-list-md">
                                 <div class="app-box">
-                                    <img class="img-responsive ios-icon app-icon" src="Nin10.png" style="border-radius: 19px;">
+                                    <img class="img-responsive ios-icon app-icon" src="nin10do.jpg" style="border-radius: 19px;">
                                     <div class="app-info">
                                         <div class="app-name">6200+ Nintendo Games</div>
                                         <p class="app-version" style="font-size: 10px"><br>Installing the app requires to follow instruction. Do not try to bypass offers. It's saving our server from bot traffic and using our server by 3rd party websites. Respect our work in tweak apps for you</p>
@@ -53,7 +53,7 @@
 									
 									
                                     </div>
-                                    <a href="#" onclick="install('Nin10.png', 'ALL Nintendo DS Games','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
+                                    <a href="#" onclick="install('nin10do.jpg', 'ALL Nintendo DS Games','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>Install</b></span>
                                     </a>
                                     <div class="clearfix"></div>
