--- a/index.html
+++ b/index.html
@@ -237,12 +237,12 @@
 <div class="item-media"><img class="app-icon" src="Soccer.jpg"></div>
 <div class="item-inner">
 <div class="item-title-row">
-<div class="item-title">Soccer / Futbol Watch Games/div>
+<div class="item-title">Soccer Futbol Watch Games/div>
 <div class="item-after">
 <a href="itweakvip/OGInject/soccer.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 </div>
 </div>
-<div class="item-subtitle">Soccer / futbol Windows, IOS, Mac, Android</div>
+<div class="item-subtitle">Soccer futbol Windows, IOS, Mac, Android</div>
 </div>
 </div>
 <div class="item-content">
