--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 </div>
 </div>
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="Hockey.jpg"></div>
+<div class="item-media"><img class="app-icon" src="Hockey 2.jpg"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Watch Hockey Games Free</div>
