--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 </div>
 </div>
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="Tennis.jpg"></div>
+<div class="item-media"><img class="app-icon" src="Tennis2.jpg"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Watch tennis Games Free</div>
