--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 <a href="itweakvip/OGInject/tennis.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 </div>
 </div>
-<div class="item-subtitle">Tennis for Windows, mac, Android, IOS/div>
+<div class="item-subtitle">Tennis for Windows, mac, Android, IOS</div>
 </div>
 </div>
 <div class="item-content">
