--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 <a href="itweakvip/OGInject/Basketball.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 </div>
 </div>
-<div class="item-subtitle">Basketball for iOS , Android, Pc, Mac</div>
+<div class="item-subtitle">Basketball on Windows, Mac, IOS, Android</div>
 </div>
 </div>
 <div class="item-content">
@@ -242,7 +242,7 @@
 <a href="itweakvip/OGInject/soccer.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 </div>
 </div>
-<div class="item-subtitle">Soccer futbol Windows, IOS, Mac, Android</div>
+<div class="item-subtitle">Soccer futbol on Windows, Mac, IOS, Android</div>
 </div>
 </div>
 <div class="item-content">
@@ -266,19 +266,19 @@
 <a href="itweakvip/OGInject/tennis.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 </div>
 </div>
-<div class="item-subtitle">Tennis for Windows, mac, Android, IOS</div>
+<div class="item-subtitle">Tennis forWindows, Mac, IOS, Android</div>
 </div>
 </div>
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="QVbHAbD.jpg"></div>
+<div class="item-media"><img class="app-icon" src="football.jpg"></div>
 <div class="item-inner">
 <div class="item-title-row">
-<div class="item-title">Moviebox</div>
+<div class="item-title">Watch NFL Football Free</div>
 <div class="item-after">
-<a href="itweakvip/OGInject/movie.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
+<a href="itweakvip/OGInject/football.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 </div>
 </div>
-<div class="item-subtitle">Movie on iOS</div>
+<div class="item-subtitle">Football on Windows, Mac, IOS, Android</div>
 </div>
 </div>
 
