--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
 </div>
 </div>
 <div class="item-subtitle">IOS / Android</div>
-
-
+</div>
 </div>
 
 <div class="item-content">
@@ -184,10 +183,7 @@
 </div>
 <div class="item-subtitle">IOS/Android</div>
 </div>
-
-
 </div>
-
 
 <div class="item-content">
 <div class="item-media"><img class="app-icon" src="qIPObrm.jpg"></div>
